ch5/src/snapshots/ch5__tests__if_form.snap
---
source: ch5/src/lib.rs
expression: prog
---
extern read_int, print_int, print_str, print_bool, print_newline
section .text

    global _start
_start:
    push rbp
    mov rbp, rsp
    sub rsp, 8
    push rbx
    call read_int
    mov rbx, rax
    cmp rbx, 1
    je block1
    xor rbx, rbx

block0:
    mov rdi, rbx
    call print_int
    call print_newline
    pop rbx
    mov rsp, rbp
    pop rbp
    mov rax, 60
    mov rdi, 0
    syscall

block1:
    mov rbx, 42
    jmp block0

