ch5/src/snapshots/ch5__tests__if_in_init.snap
---
source: ch5/src/lib.rs
expression: prog
---
extern read_int, print_int, print_str, print_bool, print_newline, initialize_runtime, allocate, new_string
section .text

    global _start
_start:
    push rbp
    mov rbp, rsp
    sub rsp, 8
    push rbx
    call read_int
    mov rbx, rax
    cmp rbx, 3
    jge block4
    mov rbx, 77

block3:
    cmp rbx, 10
    sete al
    movzx rbx, al
    cmp rbx, 0
    je block2
    mov rbx, 2

block0:
    mov rdi, rbx
    call print_int
    call print_newline
    pop rbx
    mov rsp, rbp
    pop rbp
    mov rax, 60
    mov rdi, 0
    syscall

block2:
    mov rbx, 41
    jmp block0

block4:
    mov rbx, 10
    jmp block3

